--- a/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="EventHandlers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
